--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 <body>
   <h1>Information Form</h1>
   <form method="POST" autocomplete="on" action="#null">
-
+  <fieldset>
+  <legend>Personal Info</legend>
+    <div>
+      <label>Email Address: <input type="email" name="email_field" placeholder="email here" ></label>
+    </div>
+    <div>
+      <label>Phone Number: <input type="phoneNum" name="phone_field" placeholder="phone number here" ></label>
+    </div>
+    <div>
+      <label>Date of Birth: <input type="DateBirth" name="DOB_field" placeholder="date of birth here" ></label>
+    </div>
+  </fieldset>
   </form>
 </body>
 </html>
