--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <fieldset>
   <legend>Personal Info</legend>
     <div>
-      <label>Email Address: <input type="email" name="email_field" placeholder="email here" ></label>
+      <label>Email Address: <input type="email" name="email_field" placeholder="example@email.com" ></label>
     </div>
     <div>
-      <label>Phone Number: <input type="phoneNum" name="phone_field" placeholder="phone number here" ></label>
+      <label>Phone Number: <input type="phoneNum" name="phone_field" placeholder="012-345-6789" ></label>
     </div>
     <div>
-      <label>Date of Birth: <input type="DateBirth" name="DOB_field" placeholder="date of birth here" ></label>
+      <label>Date of Birth: <input type="dateBirth" name="DOB_field" placeholder="01/23/4567" ></label>
     </div>
   </fieldset>
   </form>
