--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <label>Date of Birth: <input type="dateBirth" name="DOB_field" placeholder="01/23/4567" ></label>
     </div>
   </fieldset>
+    <input type="submit" value="Submit info">
+    <input type="reset" value="clear form">
   </form>
 </body>
 </html>
