addition of media css
added media margins and css for div types

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     </div>
     <div class="infoData">
       <label>Phone Number: <input type="phoneNum" name="phone_field" placeholder="012-345-6789" ></label>
-    </div class="infoData">
-    <div>
+    </div>
+    <div class="infoData">
       <label>Date of Birth: <input type="dateBirth" name="DOB_field" placeholder="01/23/4567" ></label>
     </div>
   </fieldset>
+  <div class="formButton">
     <input type="submit" value="Submit info">
     <input type="reset" value="Clear form">
+  </div>
   </form>
 </body>
 </html>
