--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" class="nojs">
 <head>
   <title>Lab 2</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
+  <link rel="stylesheet" media="screen" href="css/reset.css">
+  <link rel="stylesheet" media="screen" href="css/screen.css">
 </head>
 <body>
   <h1>Information Form</h1>
@@ -16,10 +16,10 @@
       <label>Email Address: <input type="email" name="email_field" placeholder="example@email.com" ></label>
     </div>
     <div class="infoData">
-      <label>Phone Number: <input type="phoneNum" name="phone_field" placeholder="012-345-6789" ></label>
+      <label>Phone Number: <input type="text" name="phone_field" placeholder="012-345-6789" ></label>
     </div>
     <div class="infoData">
-      <label>Date of Birth: <input type="dateBirth" name="DOB_field" placeholder="01/23/4567" ></label>
+      <label>Date of Birth: <input type="date" name="DOB_field" placeholder="01/23/4567" ></label>
     </div>
   </fieldset>
   <div class="formButton">
