--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Lab 2</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
-  <link rel="stylesheet" media="screen" href="css/reset.css">
+  <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/screen.css">
 </head>
 <body>
@@ -16,10 +16,10 @@
       <label>Email Address: <input type="email" name="email_field" placeholder="example@email.com" ></label>
     </div>
     <div class="infoData">
-      <label>Phone Number: <input type="text" name="phone_field" placeholder="012-345-6789" ></label>
+      <label>Phone Number: <input type="tel" name="phone_field" placeholder="012-345-6789" ></label>
     </div>
     <div class="infoData">
-      <label>Date of Birth: <input type="date" name="DOB_field" placeholder="01/23/4567" ></label>
+      <label>Date of Birth: <input type="text" name="DOB_field" placeholder="01/23/4567" ></label>
     </div>
   </fieldset>
   <div class="formButton">
